style.css
body {
    background-color: #5EAFBC;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: rgb(8, 7, 8);
    display: flex;
    justify-content: center;
    font-size: 1.5vw;
}

#container {
    background-color: rgb(229, 252, 245);
    display: flex;
    position: relative;
    top: 10vh;
    width: 80vw;
    height: 85vh;
    flex-direction: column;
    justify-content: flex-start;
    align-items: center;
    border-radius: 1vw;
    margin-bottom: 3vh;
    padding-bottom: 3vh;
    overflow-y: scroll;
}

#container div {
    overflow-y: auto;
}

#container ul {
    list-style: none;
    padding-left: 2vw;
}

#container p {
    padding-left: 2vw;
    padding-right: 2vw;
}

#funFact {
    background-color: #B6F6E3;
    width: 80%;
    margin-top: 5vh;
    text-align: center;
    border-radius: 1vmin;
    padding: 1em;
    position: relative;
}

.btn {
    margin-top: 3vh;
    margin-bottom: 1vh;
    border-radius: 1vmin;
    font-size: 3vmin;
    padding: .75em;
}

a {
    text-decoration: none;
    color: rgb(19, 111, 99);
}

a:visited {
    color: #776871;
}

a:hover {
    color: #5EAFBC;
}

@media (max-width: 425px) {
    #container {
        height: auto;
        font-size: 4vw;
        padding: 3vmin 0 3vmin 0;
    }
}

@media (max-width: 920px) and (min-width: 426px) {
    body {
        margin-bottom: 3vh;
        height: 100%;
    }

    #container {
        height: auto;
        top: 2vh;
        margin-bottom: 3vh;
        font-size: 4vw;
        padding-bottom: 3vh;
    }

    #container div {
        margin-bottom: 3vh;
    }
}

